[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/utils/scripts/PL_WorldDetector.gd" type="Script" id=1]

[node name="WorldDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="bottomRC" type="RayCast2D" parent="."]
position = Vector2( 48, -120 )
cast_to = Vector2( 20, 0 )
collision_mask = 16

[node name="topRC" type="RayCast2D" parent="."]
position = Vector2( 36, -172 )
cast_to = Vector2( 60, 0 )
collision_mask = 16

[node name="floorRC" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 196
